--- a/Income 2.ipynb
+++ b/Income 2.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -17,7 +17,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [
     {
@@ -62,7 +62,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 39,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [
     {
@@ -131,7 +131,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 47,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [
     {
@@ -175,8 +175,8 @@
     "\n",
     "print(mean_df)\n",
     "print(median_df)\n",
-    "mean_df.to_csv(r'data/income/mean_income_city.csv')\n",
-    "median_df.to_csv(r'data/income/median_income_city.csv')"
+    "#mean_df.to_csv(r'data/income/mean_income_city.csv')\n",
+    "#median_df.to_csv(r'data/income/median_income_city.csv')"
    ]
   },
   {
@@ -195,6 +195,13 @@
     "selected_df.to_csv(r'data/income/mean_income_city.csv', index = False)\n",
     "selected_df.to_csv(r'data/income/Major_Cities_income_by_zip.csv', index = False)"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 7,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
